@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-25T16:09:00Z",
-  "count_outdated" : 1276,
-  "uniques_outdated" : 684,
-  "count" : 1302,
-  "uniques" : 700,
+  "timestamp" : "2023-07-26T16:08:28Z",
+  "count_outdated" : 1278,
+  "uniques_outdated" : 685,
+  "count" : 1303,
+  "uniques" : 701,
   "clones" : [
-    {
-      "timestamp": "2023-07-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-13T00:00:00Z",
       "count": 2,
@@ -130,6 +121,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-07-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
